Style fixed in preview visible items limited to 5 ordering fixed

--- a/PCFTextBlocks/styles/style.css
+++ b/PCFTextBlocks/styles/style.css
@@ -28,3 +28,8 @@
   align-items: stretch;
   position: relative;
 }
+
+.textBlockContent iframe {
+  border: 0;
+  width: 100%;
+}
